@@ -22,6 +22,9 @@ Release 2.7.3 - UNRELEASED
     HADOOP-12374. Updated expunge command description.
     (WeiWei Yang via eyang)
 
+    HADOOP-11361. Fix a race condition in MetricsSourceAdapter.updateJmxCache.
+    (Brahma Reddy Battula via ozawa)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
